# CppTuringMachine

./: AbstractTuringMachine.h  CMakeLists.txt  MetaTuringMachine.h  StringStream.h  TuringMachine.h  TypeTraits.h  main.cpp
testing/: MetaTuringMachine.cpp
